public/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    background-color: #232428;
    width: 100svw;
    height: 100svh;
    color: #bcbec2;
    margin: 0;
    padding: 0;
    font-family: "Noto Sans", "Noto Color Emoji", sans-serif;
    font-size: 15px;
    display: flex;
}

#bodywrap {
    width: 100%;
    height: calc(100% - 1px);
}

textarea,
input,
select,
button {
    font-family: "Noto Sans", "Noto Color Emoji", sans-serif;
}

textarea {
    resize: vertical;
}

::-webkit-scrollbar {
    width: 12px;
    scrollbar-gutter: stable;
    /* border: 5px solid #313338; */
}

::-webkit-scrollbar-track {
    background-color: #2c2d31;
    border: 3px solid #313338;
    margin-top: 5px;
    margin-bottom: 5px;

    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    background-color: #1e1f23;
    border-radius: 10px;
    background-clip: content-box;
    border: 3px solid transparent;
    min-height: 40px;
}

#chatWrap {
    position: relative;
    max-height: 100%;
    max-width: 85%;
    overflow-y: auto;
}

#universalControls {
    justify-content: space-between;
    display: flex;
    position: relative;
    width: 100%;
}

#universalControls>div {
    gap: 1em
}

#LLMChatWrapper,
#OOCChatWrapper {
    height: 100%;
    overflow: hidden;
    position: relative;
}

#inputBlock,
#AIInputBlock {
    display: flex;
    align-items: center;
    align-content: center;
    justify-content: center;
    background-color: #313338;
    border-radius: 0 0 10px 10px;
}

.inputAndIconsWrapper {
    border-radius: 10px;
    margin: 5px;
    background-color: #393a3f;
    width: 100%;
}

#controlPanel {
    max-width: 15svw;
    width: 15svw;
    /* min-width: 200px; */
    background-color: #2c2d31;
    margin-right: 5px;
    border-radius: 0 10px 10px 0;
}

#controlPanel h4 {
    margin: 5px 0;
    font-size: 1.25em;
    text-align: center;
}

#controlPanel span {
    font-size: 0.8em;
}

input,
textarea,
button,
select,
.nonButtonButton {
    border-radius: 5px;
    border: 0;
    background-color: #393a3f;
    color: #afb1b6;
    outline: none;

    z-index: 2;
}

button,
select,
.nonButtonButton {
    cursor: pointer;
}

button,
select,
input,
.nonButtonButton {
    transition: all 250ms;
}

textarea {
    transition: background-color 250ms;
}

select {
    font-size: 0.8em;
    appearance: none;
    padding: 3px 1em 3px 3px;
    width: fit-content;
    /* min-width: 50px; */
    display: flex;
}

select:hover:not(:disabled),
.pastChatItem:hover {
    background-color: #52545b;
}

.hostControls {
    display: none
}

.positionAbsolute {
    position: absolute;
}

.positionRelative {
    position: relative;
}

.custom-select {
    display: flex;
    justify-content: right;
    position: relative;
    z-index: 3;
    width: fit-content;
}

.chatTrash {
    top: 5px;
    right: 15px;
    background: transparent;
}

.custom-select::before,
.custom-select::after {
    --size: 0.3rem;
    content: "";
    position: absolute;
    right: 3px;
    top: 3px;
    pointer-events: none;
    z-index: 3;
}

.custom-select::before {
    border-left: var(--size) solid transparent;
    border-right: var(--size) solid transparent;
    border-bottom: var(--size) solid #888;
    top: 25%;
}

.custom-select::after {
    border-left: var(--size) solid transparent;
    border-right: var(--size) solid transparent;
    border-top: var(--size) solid #888;
    top: 50%;
}

/*CHECKBOXES*/
input[type='checkbox'] {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    /* outline: 1px solid #666; */
    position: relative;
    width: 1.5em;
    height: 1.5em;
    overflow: hidden;
    border-radius: 3px;
    /* border: 1px solid #666; */
    background-color: #343437;
    /* another weird color mismatch cope */
    box-shadow: inset 0 0 2px 0 rgba(0, 0, 0, 0.5);
    cursor: pointer;
    transform: translateY(-0.075em);
    flex-shrink: 0;
    place-content: center;
    filter: brightness(1.2);
}

input[type='checkbox'] {
    display: grid;
}

input[type="checkbox"]::before {
    content: "";
    width: 1em;
    height: 1em;
    transform: scale(0);
    transition: 120ms transform ease-in-out;
    box-shadow: inset 1em 1em #888;
    transform-origin: bottom left;
    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
}

input[type="checkbox"]:checked::before {
    transform: scale(1);
}

input[type='checkbox']:hover {
    filter: brightness(1.5);
}

.checkbox_label {
    display: flex;
    flex-direction: row;
    column-gap: 5px;
    align-items: baseline;
}

button,
input,
.nonButtonButton {
    padding: 3px;
    width: fit-content;
}

.scrollY {
    overflow-y: auto;
}

.hoverglow {
    transition: all 250ms;
    outline: 1px solid #666;
    filter: saturate(0.5);

}



.bgBrightUp:hover,
.bgBrightUp:focus {
    background-color: #52545b;
    border: 0;
}

.textBrightUp:hover {
    color: white !important
}

#OOCChatWrapper img,
#LLMChatWrapper img {
    max-height: 80%;
    max-width: 80%
}

code {
    font-family: monospace;
    background: #232428;
    border-radius: 5px;
    padding: 2px 4px;
    margin: 5px;
    line-height: 1.4em;
    font-size: 1.1em;
}

pre {
    /* border: 1px solid white; */
    padding: 0px 5px;
    background: #232428;
    margin: 5px;
    border-radius: 5px;
    width: min-content;
}

.invisible-quotation::before,
.invisible-quotation::after {
    display: none;
}

#chat div,
#AIChat div {
    padding: 5px 5% 5px 10px;
    margin-bottom: 10px;
    overflow-wrap: break-word;
}

#chat div:hover,
#AIChat div:hover {
    background-color: #2f3035
}

#chat div p,
#AIChat div p {
    margin: 0;
    padding-bottom: 10px;
}

#chat div p em,
#AIChat div p em {
    color: #797d86
}

#chat div p q,
#AIChat div p q {
    color: #8ca3d9
}
/* ... */

